Deleted newModel.py since we now have a working model (no need for it). Updated README in order to explain this project. Updated trollModel.ipynb including comments and adjusting the model itself slightly to increase accuracy as well as avoid over-fitting.

--- a/trollModel.ipynb
+++ b/trollModel.ipynb
@@ -67,13 +67,11 @@
     "file_path = 'justin.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "# Preprocess 'Date' and 'Time' columns into a combined datetime column\n",
+    "# Preprocess Date & Time\n",
     "df['DateTime'] = pd.to_datetime(df['Date'] + ' ' + df['Time'], format='%m/%d %H:%M')\n",
-    "\n",
-    "# Drop the original 'Date' and 'Time' columns if not needed\n",
     "df.drop(['Date', 'Time'], axis=1, inplace=True)\n",
     "\n",
-    "# Display the first few rows of the dataset to verify\n",
+    "# Verify Data\n",
     "print(df.head())\n"
    ],
    "metadata": {
@@ -103,34 +101,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Location            DateTime  Hour  DayOfWeek  Location_Code\n",
-      "0      Stever 1900-06-30 23:09:00    23          5              2\n",
-      "1      Stever 1900-07-01 22:34:00    22          6              2\n",
-      "2      Stever 1900-07-01 16:00:00    16          6              2\n",
-      "3      Stever 1900-07-01 22:46:00    22          6              2\n",
-      "4   Forbes St 1900-07-02 18:51:00    18          0              1\n",
-      "5      Stever 1900-07-02 23:10:00    23          0              2\n",
-      "6        Cafe 1900-07-01 10:30:00    10          6              0\n",
-      "7        Cafe 1900-07-03 12:07:00    12          1              0\n",
-      "8      Stever 1900-07-03 19:36:00    19          1              2\n",
-      "9   Forbes St 1900-07-03 17:25:00    17          1              1\n",
-      "10     Stever 1900-07-03 20:15:00    20          1              2\n",
-      "11     Stever 1900-07-03 22:17:00    22          1              2\n",
-      "12     Stever 1900-07-04 00:02:00     0          2              2\n",
-      "13       Cafe 1900-07-04 13:09:00    13          2              0\n",
-      "14     Stever 1900-07-04 15:11:00    15          2              2\n",
-      "15     Stever 1900-07-04 18:50:00    18          2              2\n"
+      "    Location            DateTime  Hour  DayOfWeek  Location_Code\n",
+      "0     Stever 1900-06-30 23:09:00    23          5              2\n",
+      "1     Stever 1900-07-01 22:34:00    22          6              2\n",
+      "2     Stever 1900-07-01 16:00:00    16          6              2\n",
+      "3     Stever 1900-07-01 22:46:00    22          6              2\n",
+      "4  Forbes St 1900-07-02 18:51:00    18          0              1\n"
      ]
     }
    ],
    "source": [
-    "# Assuming df is your DataFrame with 'Date', 'Time', and 'Location' columns\n",
-    "\n",
     "# Extract features from datetime\n",
     "df['Hour'] = df['DateTime'].dt.hour\n",
     "df['DayOfWeek'] = df['DateTime'].dt.dayofweek\n",
     "\n",
-    "# Encode categorical 'Location' labels\n",
+    "# Encoding via OneHotEncoder\n",
     "label_encoder = LabelEncoder()\n",
     "df['Location_Code'] = label_encoder.fit_transform(df['Location'])\n",
     "\n",
@@ -138,18 +123,17 @@
     "X = df[['Hour', 'DayOfWeek']].values\n",
     "y = df['Location_Code'].values\n",
     "\n",
-    "# Display the first few rows of the processed DataFrame to verify\n",
-    "print(df)"
+    "print(df.head())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-05T13:14:31.173595Z",
-     "start_time": "2024-07-05T13:14:30.981583Z"
+     "end_time": "2024-07-05T14:04:55.088853Z",
+     "start_time": "2024-07-05T14:04:54.999492Z"
     }
    },
    "id": "879c481c5c3fd23d",
-   "execution_count": 4
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
@@ -175,12 +159,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-05T13:14:32.566225Z",
-     "start_time": "2024-07-05T13:14:32.429771Z"
+     "end_time": "2024-07-05T14:05:03.436927Z",
+     "start_time": "2024-07-05T14:05:03.412924Z"
     }
    },
    "id": "89f74e341003b3fa",
-   "execution_count": 5
+   "execution_count": 35
   },
   {
    "cell_type": "markdown",
@@ -480,18 +464,6 @@
     "collapsed": false
    },
    "id": "fb823ec798026ecb"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2024-07-05T13:00:18.991906Z"
-    }
-   },
-   "id": "da89e70e9d93fef8"
   }
  ],
  "metadata": {
