adjusted notebook to include saving the model files in both .keras and .h5 formats

--- a/trollModel.ipynb
+++ b/trollModel.ipynb
@@ -2,25 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-05T13:14:16.922395Z",
-     "start_time": "2024-07-05T13:13:54.887794Z"
+     "end_time": "2024-07-05T16:54:16.160264Z",
+     "start_time": "2024-07-05T16:54:16.122958Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-05 09:14:05.889068: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import libraries\n",
     "\n",
@@ -33,7 +24,8 @@
     "from tensorflow.keras import Input\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.models import Model"
+    "from tensorflow.keras.models import Model\n",
+    "import os"
    ]
   },
   {
@@ -566,13 +558,51 @@
    "id": "fb823ec798026ecb"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Save Model File"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bca54cf9699e932f"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "filePath = '/users/alexanderokenczyc/documents/github/trollModelRA'\n",
+    "model.save('justin.keras')\n",
+    "model.save('justin.h5')\n",
+    "#model.save('trollModel.h5')\n",
+    "# tf.keras.Model.save('trollModel.h5', filepath=filepath)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-05T17:01:46.590311Z",
+     "start_time": "2024-07-05T17:01:46.427745Z"
+    }
+   },
+   "id": "f663f8d19c377db",
+   "execution_count": 79
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "f663f8d19c377db"
+   "id": "3f9de3087530bfbc"
   }
  ],
  "metadata": {
