lots of issues with current model, have to adjust to make sure everything will work properly. Currently not working as is so do not use

--- a/trollModel.ipynb
+++ b/trollModel.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-05T16:54:16.160264Z",
-     "start_time": "2024-07-05T16:54:16.122958Z"
+     "end_time": "2024-07-05T17:26:57.176790Z",
+     "start_time": "2024-07-05T17:26:57.145992Z"
     }
    },
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
@@ -22,10 +21,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from tensorflow.keras import Input\n",
-    "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.models import Model\n",
-    "import os"
+    "from tensorflow.keras.models import Model"
    ]
   },
   {
@@ -594,15 +591,6 @@
    },
    "id": "f663f8d19c377db",
    "execution_count": 79
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3f9de3087530bfbc"
   }
  ],
  "metadata": {
