Updated model design and new data added as well. Now with 77.78% accuracy but still need more data. Next step is to make website.

--- a/modelPackages/trollModel.ipynb
+++ b/modelPackages/trollModel.ipynb
@@ -485,12 +485,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-06T04:45:40.989383Z",
-     "start_time": "2024-07-06T04:45:34.670184Z"
+     "end_time": "2024-07-06T04:46:28.619645Z",
+     "start_time": "2024-07-06T04:46:28.437979Z"
     }
    },
    "id": "f663f8d19c377db",
-   "execution_count": 102
+   "execution_count": 103
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6552a1f3370414c3"
   }
  ],
  "metadata": {
