--- a/modelPackages/trollModel.ipynb
+++ b/modelPackages/trollModel.ipynb
@@ -494,12 +494,59 @@
   },
   {
    "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alexanderokenczyc/anaconda3/envs/EnvTensor/lib/python3.10/site-packages/keras/src/saving/saving_lib.py:576: UserWarning: Skipping variable loading for optimizer 'rmsprop', because it has 8 variables whereas the saved optimizer has 14 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Exception encountered when calling Functional.call().\n\n\u001B[1mInvalid input shape for input Tensor(\"functional_20_1/Cast:0\", shape=(6,), dtype=float32). Expected shape (None, 7), but input has incompatible shape (6,)\u001B[0m\n\nArguments received by Functional.call():\n  • inputs=tf.Tensor(shape=(6,), dtype=int64)\n  • training=False\n  • mask=None",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[110], line 7\u001B[0m\n\u001B[1;32m      5\u001B[0m new_time_data \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39marray([\u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m3\u001B[39m, \u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m5\u001B[39m, \u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m3\u001B[39m])\n\u001B[1;32m      6\u001B[0m \u001B[38;5;66;03m# Perform prediction\u001B[39;00m\n\u001B[0;32m----> 7\u001B[0m predictions \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpredict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnew_time_data\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;66;03m# Return predictions\u001B[39;00m\n\u001B[1;32m     10\u001B[0m predictions\u001B[38;5;241m.\u001B[39mflatten()\n",
+      "File \u001B[0;32m~/anaconda3/envs/EnvTensor/lib/python3.10/site-packages/keras/src/utils/traceback_utils.py:122\u001B[0m, in \u001B[0;36mfilter_traceback.<locals>.error_handler\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m    119\u001B[0m     filtered_tb \u001B[38;5;241m=\u001B[39m _process_traceback_frames(e\u001B[38;5;241m.\u001B[39m__traceback__)\n\u001B[1;32m    120\u001B[0m     \u001B[38;5;66;03m# To get the full stack trace, call:\u001B[39;00m\n\u001B[1;32m    121\u001B[0m     \u001B[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001B[39;00m\n\u001B[0;32m--> 122\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m e\u001B[38;5;241m.\u001B[39mwith_traceback(filtered_tb) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m    123\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[1;32m    124\u001B[0m     \u001B[38;5;28;01mdel\u001B[39;00m filtered_tb\n",
+      "File \u001B[0;32m~/anaconda3/envs/EnvTensor/lib/python3.10/site-packages/keras/src/models/functional.py:244\u001B[0m, in \u001B[0;36mFunctional._adjust_input_rank\u001B[0;34m(self, flat_inputs)\u001B[0m\n\u001B[1;32m    242\u001B[0m             adjusted\u001B[38;5;241m.\u001B[39mappend(ops\u001B[38;5;241m.\u001B[39mexpand_dims(x, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m))\n\u001B[1;32m    243\u001B[0m             \u001B[38;5;28;01mcontinue\u001B[39;00m\n\u001B[0;32m--> 244\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[1;32m    245\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mInvalid input shape for input \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mx\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m. Expected shape \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    246\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mref_shape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m, but input has incompatible shape \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mx\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    247\u001B[0m     )\n\u001B[1;32m    248\u001B[0m \u001B[38;5;66;03m# Add back metadata.\u001B[39;00m\n\u001B[1;32m    249\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(flat_inputs)):\n",
+      "\u001B[0;31mValueError\u001B[0m: Exception encountered when calling Functional.call().\n\n\u001B[1mInvalid input shape for input Tensor(\"functional_20_1/Cast:0\", shape=(6,), dtype=float32). Expected shape (None, 7), but input has incompatible shape (6,)\u001B[0m\n\nArguments received by Functional.call():\n  • inputs=tf.Tensor(shape=(6,), dtype=int64)\n  • training=False\n  • mask=None"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from tensorflow.keras.models import load_model\n",
+    "# Load the trained model\n",
+    "model = load_model('justin.keras')  # Assuming you have saved the model\n",
+    "new_time_data = np.array([2, 3, 2, 5, 2, 3])\n",
+    "# Perform prediction\n",
+    "predictions = model.predict(new_time_data)\n",
+    "\n",
+    "# Return predictions\n",
+    "predictions.flatten()  # Return predictions as a 1D array"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-06T05:59:27.736058Z",
+     "start_time": "2024-07-06T05:59:27.223675Z"
+    }
+   },
+   "id": "6552a1f3370414c3",
+   "execution_count": 110
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "6552a1f3370414c3"
+   "id": "dd1856ab269bcd09"
   }
  ],
  "metadata": {
